# VLM-SubtleBench

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
configs/: free_form_evaluation.yaml  multiple_choice_evaluation.yaml
scripts/: evaluate_free_form.py  evaluate_multiple_choice.py  json_viewer.py
src/vlm_subtlebench/: base_agent.py  free_form_evaluator.py  json_schemas.py  multiple_choice_evaluator.py  utils.py
src/vlm_subtlebench/dataset_adapters/: __init__.py  base_adapter.py  data_loader.py  response_parser.py  unified_adapter.py
src/vlm_subtlebench/llms/: anthropic_utils.py  constants.py  deepseek_utils.py  google_utils.py  llm.py  openai_utils.py  openrouter_utils.py  retry_utils.py  typing.py  utils.py  vllmserver_utils.py
src/vlm_subtlebench/prompts/: free_form_evaluator.py  multiple_choice_evaluator.py
